[gd_scene load_steps=11 format=3 uid="uid://ekfex3rpugck"]

[ext_resource type="Script" uid="uid://bpqgtlve1xqte" path="res://Scripts/Interactables/painting.gd" id="1_painting"]
[ext_resource type="Texture2D" uid="uid://dllibx1ktwcdj" path="res://Art Assets/painting_frame.png" id="2_frame_tex"]
[ext_resource type="Texture2D" uid="uid://cq2djg8ooli6g" path="res://Art Assets/painting_frame_h.png" id="3_frame_h"]
[ext_resource type="Texture2D" uid="uid://cwib3w46bbmho" path="res://Art Assets/painting_yono.png" id="4_artwork"]
[ext_resource type="AudioStream" uid="uid://c0o7eml7ijkds" path="res://Audio/fridge_open.mp3" id="9_open_sfx"]
[ext_resource type="AudioStream" uid="uid://bept4o82vr8bw" path="res://Audio/fridge_close.mp3" id="10_close_sfx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_artwork"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("4_artwork")
rim_enabled = true
rim = 0.2
rim_tint = 0.1
texture_filter = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_frame"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("2_frame_tex")
rim_enabled = true
rim = 0.19
rim_tint = 0.1
heightmap_enabled = true
heightmap_scale = 1.0
heightmap_texture = ExtResource("3_frame_h")
texture_filter = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_artwork"]
size = Vector3(0.8, 0.6, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(0.96, 0.7, 0.1)

[node name="Painting" type="StaticBody3D"]
collision_layer = 5
script = ExtResource("1_painting")
painting_frame_texture = ExtResource("2_frame_tex")
painting_frame_heightmap = ExtResource("3_frame_h")

[node name="FocusMarker" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.0822754)

[node name="VisualPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.48, 0, 0)

[node name="ArtworkSprite" type="Sprite3D" parent="VisualPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.48, 0, 0)
material_override = SubResource("StandardMaterial3D_artwork")
shaded = true
double_sided = false
alpha_cut = 2
texture_filter = 2

[node name="FrameSprite" type="Sprite3D" parent="VisualPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.48, 0, 0.002)
material_override = SubResource("StandardMaterial3D_frame")
shaded = true
double_sided = false
alpha_cut = 2
texture_filter = 2
texture = ExtResource("2_frame_tex")

[node name="ArtworkClickArea" type="StaticBody3D" parent="VisualPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.48, 0, 0.05)
collision_layer = 32
collision_mask = 0
script = ExtResource("1_painting")

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisualPivot/ArtworkClickArea"]
shape = SubResource("BoxShape3D_artwork")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_1")

[node name="OpenSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_open_sfx")

[node name="CloseSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_close_sfx")
